--- a/demo.css
+++ b/demo.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #fbfbfb;
+    background-color: #d6ecf4;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -11,10 +11,18 @@ body {
 .header {
     width: 100%;
     padding: 10px;
-    background-color: #ceaab5;
+    background-color: #b7eef7;
     display: flex;
     justify-content: space-between;
     color: #03045e
+}
+
+.header span {
+    font-size: 20px;
+    margin-right: 10px;
+    margin-top: 10px;
+    color: #03045e;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h2 {
@@ -24,15 +32,8 @@ h2 {
     text-align: center;
 }
 
-/* img{
-    margin-top: 1%;
-    width: 10%;
-    height: 20%;
-    align-content: center;
-} */
-
-.img1 {
-    margin-top: 1%;
+.header1 img1 {
+    margin-top: 12%;
     width: 10%;
     height: 80%;
     align-items: center;
@@ -42,10 +43,13 @@ h2 {
     width: 100%;
     height: 20%;
     display: flex;
+    /* margin-left: 25%; */
     margin-top: .50%;
-    background-color: #f4acb7;
-    color: #794995;
+    background-color: #f9b8c4;
+    color: #089fd1;
     text-align: center;
+    align-items: center;
+    align-content: center;
     font-size: 40px;
     font-family: cursive;
     justify-content: center;
@@ -106,7 +110,9 @@ h3 {
 }
 
 .section h3 {
-    color: coral;
+    color: #03045e;
+    font-size: 50px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
