--- a/style.css
+++ b/style.css
@@ -1,36 +1,110 @@
-/* body {
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fff8f0;
 }
 
-header {
-    /* background-color: #f3c1c6; 
-    background-color: #FFF8E7;
-    color: #3a3a3a;
-    padding: 20px 0;
-    text-align: center;
-} */
+/* Navbar*/
 
-nav ul {
-    list-style-type: none;
+.main {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+ul {
+    margin: 0;
     padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
+h1 {
+    font-size: 50px;
+    color: #5C4033;
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-nav ul li a {
-    color: #3a3a3a;
+h2 {
+    font-size: 40px;
+    color: #5C4033;
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p {
+    font-size: 20px;
+    color: #5C4033;
+    text-align: center;
+    margin-top: 20px;
+    font-family: serif;
+}
+
+h3 {
+    font-size: 30px;
+    color: #5C4033;
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+li a {
+    padding: 20px;
+    font-size: 24px;
     text-decoration: none;
-    font-weight: bold;
+    color: black;
+    position: relative;
+}
+
+li a:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-top: 2px solid coral;
+    border-bottom: 2px solid coral;
+    left: 0;
+    top: 0;
+    transform: scaleY(2);
+    transition: .5s;
+    opacity: 0;
+}
+
+li a:hover:before {
+    transform: scaleY(1.1);
+    opacity: 1;
+}
+
+li a:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: coral;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transform: scale(0);
+    transition: .5s;
+}
+
+li a:hover:after {
+    transform: scale(1);
 }
 
 .hero {
     text-align: center;
+    margin-top: 7%;
     padding: 50px 20px;
     background-color: #fde8cd;
 }
@@ -60,55 +134,24 @@ article img {
     border-radius: 8px;
 }
 
-/* footer {
-    background-color: #f3c1c6;
-    color: #3a3a3a;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+.footer {
     width: 100%;
-} */
-
-@media (max-width: 768px) {
-    .features article {
-        width: 45%;
-    }
+    padding: 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    align-content: center;
 }
-
-@media (max-width: 480px) {
-    .features {
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .features article {
-        width: 80%;
-    }
-}
-
-
-
-
-
 
 body {
     background-color: #FFF8E7;
     color: #5C4033;
     text-align: center;
-    /* padding: 50px 20px; */
-    /* background-color: #fde8cd; */
-}
-
-a, .button {
-    background-color: #FFD1DC;
-    color: #5C4033;
 }
 
 .header, .footer {
     background-color: #F9D773;
-    color: #FFF8E7;
+    color: #000000;
 }
 
 .special-offer {
