--- a/aboutus.css
+++ b/aboutus.css
@@ -4,17 +4,82 @@ body {
     padding: 0;
     background-color: #FFF8E7;
 }
-p{
+.main {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+li a {
+    padding: 20px;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    position: relative;
+}
+
+li a:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-top: 2px solid coral;
+    border-bottom: 2px solid coral;
+    left: 0;
+    top: 0;
+    transform: scaleY(2);
+    transition: .5s;
+    opacity: 0;
+}
+
+li a:hover:before {
+    transform: scaleY(1.1);
+    opacity: 1;
+}
+
+li a:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: coral;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transform: scale(0);
+    transition: .5s;
+}
+
+li a:hover:after {
+    transform: scale(1);
+}
+
+p {
     color: #5C4033;
     margin-left: 10px;
 
 }
+
 .footer {
     width: 100%;
     padding: 20px;
     text-align: center;
     align-content: center;
 }
+
 .header, .footer {
     background-color: #F9D773;
     color: #000000;
@@ -22,11 +87,21 @@ p{
 
 
 
-h1{
-    color: #D32F2F;
-    margin-left: 10px;
+h1 {
+    font-size: 50px;
+    color: #5C4033;
     text-align: center;
-}z
+    margin-top: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h2 {
+    font-size: 40px;
+    color: #000000;
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 form {
     background-color: #E9D5FF;
@@ -66,6 +141,7 @@ input[type="submit"]:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
     display: inline-block;
+    margin-left: 8%;
     /* Make cards inline to be in a horizontal row */
 }
 
