--- a/contactus.css
+++ b/contactus.css
@@ -8,24 +8,35 @@ body {
     height: 100vh;
     background-color: #FFF8E7;
 }
-img{
-    width: 50%;
-    height: auto;
+img {
+    width: 45%;
+    height: 70%;
     object-fit: cover;
 }
+
 .contact-form {
     background-color: #FFF8E7;
     border-radius: 3px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 5px;
     width: 400px;
     border: 3px solid rgba(71, 2, 2, 0.868);
-    margin-left: 20px;
+    margin-left: 5px;
 }
-h2{
+
+h1 {
+    font-size: 50px;
+    color: #5C4033;
     text-align: center;
-    font-size: 25px;
-    color: rgba(71, 2, 2, 0.868);;
+    margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+h2 {
+    text-align: center;
+    font-size: 30px;
+    color: rgba(71, 2, 2, 0.868);
+    ;
 }
 
 .contact-form label {
@@ -51,18 +62,4 @@ h2{
     cursor: pointer;
     font-size: 16px;
     align-items: center;
-}
-
-.footer {
-    width: 100%;
-    padding: 20px;
-    background-color: black;
-    color: white;
-    text-align: center;
-    align-content: center;
-}
-
-.footer {
-    background-color: #F9D773;
-    color: #000000;
 }
